# flappy_ferris

./: Cargo.toml
.github/scripts/: apk2aab.sh
.github/workflows/: cd.yml
distribution/whatsnew/: whatsnew-en-US  whatsnew-es-419
scripts/: apk2aab.sh
src/: global.rs  main.rs
src/entities/: mod.rs  pipe.rs  player.rs  ui.rs
