[package]
name = "flappy_ferris"
version = "1.1.0"
edition = "2021"

[dependencies]
crossbow = "0.2.3"
macroquad = { version = "0.3.25", default-features = false }
macroquad-text = "0.1.1"

[package.metadata]
label = "Flappy Ferris"
assets = ["assets"]
icon = "assets/icon.png"

[package.metadata.android]
app_wrapper = "quad"
version_code = 110
version_name = "1.1.0"
resources = ["android_res"]
android_version = 31
target_sdk_version = 29
min_sdk_version = 25
fullscreen = true
debug_build_targets = ["aarch64-linux-android"]
release_build_targets = [
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android"
]

[package.metadata.android.manifest]
package = "com.sergioribera.flappy_ferris"

# [package.metadata.android.activity_attributes]
# "android:exported" =  "true"
