[package]
name = "flappy_ferris"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.3.25", default-features = false }
macroquad-text = "0.1.1"

[package.metadata.android]
version_code = 10
version_name = "0.1.0"
package_name = "com.sergioribera.flappy_ferris"
res = "android_res"
icon = "@mipmap/ic_launcher"
android_version = 31
target_sdk_version = 31
min_sdk_version = 25
fullscreen = true
label = "Flappy Ferris"
assets = "assets/"
build_targets = [
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
]

# [package.metadata.android.activity_attributes]
# "android:exported" =  "true"
